--- a/main.css
+++ b/main.css
@@ -73,8 +73,8 @@ nav .nav-links li a:hover {
 }
 
 .welcome-img {
-    width: 150px;
-    height: 150px;
+    width: 400px;
+    
     border-radius: 50%;
     margin-bottom: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -90,6 +90,7 @@ nav .nav-links li a:hover {
     font-size: 1.2rem;
     color: #555;
     margin-bottom: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* Button Styles */
@@ -205,6 +206,9 @@ section {
     font-size: 1.2rem;
     color: #555;
     margin-bottom: 20px;
+    margin-left: 15%;
+    margin-right: 15%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .read-more-btn {
@@ -222,6 +226,7 @@ section {
     color: #333;
 }
 
+
 /* Blog Section */
 #blog {
     background-color: #fff;
@@ -237,7 +242,7 @@ section {
 
 .blog-container {
     position: relative;
-    width: 100%; /* Full width of the blog section */
+    width: 96%; /* Full width of the blog section */
     max-width: 100%; /* No constraint on max width */
     overflow: hidden; /* Hide overflowing blogs */
     display: flex;
@@ -261,7 +266,7 @@ section {
 
 /* Each blog item will take 50% of the visible area, meaning 2 blogs will be visible at a time */
 .blog-item {
-    flex: 0 0 50%; /* Each blog occupies 50% of the wrapper */
+    flex: 0 0 48%; /* Each blog occupies 50% of the wrapper */
     height: 450px;
     display: flex;
     flex-direction: column;
@@ -275,7 +280,7 @@ section {
 .blog-item img {
     width: 100%;
     height: 60%; /* The image takes up 60% of the blog item */
-    object-fit: cover;
+    object-fit:contain;
     border-radius: 10px;
     margin-bottom: 10px;
 }
@@ -283,17 +288,20 @@ section {
 .blog-text {
     flex: 1;
     text-align: left;
+    
 }
 
 .blog-text h3 {
     margin-bottom: 10px;
     font-size: 1.5rem;
     color: #333;
+    font-family:'Courier New', Courier, monospace;
 }
 
 .blog-text p {
     font-size: 1.1rem;
     color: #555;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* Arrow Buttons */
